--- a/src/css/style.css
+++ b/src/css/style.css
@@ -260,4 +260,14 @@ table {
   color: #fff;
 }
 
+.partners {
+  background-color: red;
+  border-top: 1px solid #E9E9E9;
+  border-bottom: 1px solid #E9E9E9;
+}
+.partners .container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 /*# sourceMappingURL=style.css.map */
