--- a/src/sass/layouts/layout_000/header.scss
+++ b/src/sass/layouts/layout_000/header.scss
@@ -1,6 +1,12 @@
 .header {
-    background-color: $whiteBg;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 81px;
+    background-color: $whiteGreen;
     border: 1px solid $whiteBorder;
+    z-index: 3;
+    // transition: 0.3s;
 
     .container {
         padding-top: 19px;
@@ -11,12 +17,38 @@
         align-items: center;
     }
 
+    &-button {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 9px;
+        width: 42px;
+        height: 42px;
+        background: transparent;
+        border: transparent;
+        cursor: pointer;
+
+        span {
+            display: block;
+            width: 24px;
+            height: 2px;
+            background-color: $black;
+            transition: 0.5s ease-out;
+
+            &:not(:last-child) {
+                margin-bottom: 8px;
+            }
+        }
+    }
+
     &-logo {
         width: 138px;
         height: 41px;
     }
 
     &-nav {
+        display: none;
 
         &__list {
             display: flex;
@@ -46,18 +78,28 @@
     }
 
     &-dropdown {
-        width: fit-content;
+        width: 40px;
+        padding: 5px 5px;
         border: transparent;
         cursor: pointer;
         text-transform: uppercase;
-        margin-right: 20px;
         font-family: 'Ubuntu', 'Arial', sans-serif;
         font-style: normal;
         font-weight: 400;
+        margin-right: 15px;
+        appearance: none;
+        background-color: transparent;
+        background: url('../img/dropdown-icon-black.svg') no-repeat right;
+        background-position-x: right;
+        background-size: 10px 8px;
+        outline: none;
+
 
         &:focus {
+            background: url('../img/dropdown-icon-white.svg') no-repeat right;
             background-color: $blue;
             color: $white;
+            
         }
 
         option {
@@ -67,11 +109,17 @@
     }
 
     &-contacts {
-        display: flex;
+        display: none;
         flex-direction: row;
         align-items: center;
 
         &__item {
+            
+            transition: 0.4s;
+
+            &:hover {
+                transform: scale(1.3);
+            }
 
             .contact-link {
 
@@ -86,5 +134,71 @@
             }
         }
     }
+}
 
+// активне меню burger
+.header--active {
+    height: 100vh;
+    width: 100%;
+
+    .container {
+        padding: 19px 0px;
+    }
+
+    .header-button {
+        margin-left: 15px;
+        span:nth-of-type(2) {
+            width: 17px;
+        }
+    }
+        
+    .header-nav {
+        top: 150px;
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        min-width: 100%;
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            min-width: 100%;
+            &-item {
+                text-transform: uppercase;
+                padding: 15px 0;
+                cursor: pointer;
+                background-color: transparent;
+                transition: 0.3s;
+
+                &:hover {
+                    background-color: $blue;
+                    a {
+                        color: $white;
+                    }
+                    
+                }
+
+                &:not(:last-child) {
+                    margin-right: 0px;
+                    // margin-bottom: 30px;
+                }
+            }
+        }
+    }
+
+    .header-right-side {
+
+        .header-dropdown {
+            margin-right: 15px;
+        }
+
+        .header-contacts {
+            display: flex;
+            position: absolute;
+            bottom: 30px;
+            left: calc(50% - 50px);
+        }
+
+    }
 }
