--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,9 @@
 @import './base/index';
 @import 'layouts/layout_000/index';
 
-// @media only screen and (min-width: 576px) {
-//     @import 'layouts/_layout_576/index';
-// }
+@media only screen and (min-width: 576px) {
+    @import 'layouts/layout_576/index';
+}
 
 // @media only screen and (min-width: 768px) {
 //     @import 'layouts/_layout_768/index';
@@ -13,6 +13,6 @@
 //     @import 'layouts/_layout_992/index';
 // }
 
-// @media only screen and (min-width: 1170px) {
-//     @import 'layouts/_layout_1170/index';
-// }
+@media only screen and (min-width: 1170px) {
+    @import 'layouts/layout_1170/index';
+}
