completed quality statistics and what-is sections

--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -3,4 +3,6 @@ $whiteBg: #FCFCFC;
 $whiteBorder: #E9E9E9;
 $black: #000000;
 $blue: #0098AC;
+$purpleDark: #3F3D56;
 $whiteGreen: #E6F5F7;
+$silverShadow: rgb(145, 143, 143);
