--- a/src/sass/layouts/layout_000/index.scss
+++ b/src/sass/layouts/layout_000/index.scss
@@ -3,3 +3,7 @@
 @import 'hero';
 @import 'partners';
 @import 'about';
+@import 'statistics';
+@import 'what-is';
+@import 'benefits';
+@import 'quality';
