--- a/src/sass/layouts/layout_1170/index.scss
+++ b/src/sass/layouts/layout_1170/index.scss
@@ -1,3 +1,7 @@
 @import 'header';
 @import 'hero';
 @import 'about';
+@import 'statistics';
+@import 'what-is';
+@import 'benefits';
+@import 'quality';
