--- a/src/sass/layouts/layout_000/hero.scss
+++ b/src/sass/layouts/layout_000/hero.scss
@@ -42,16 +42,14 @@
         }
 
         a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            min-height: 50px;
-            background: $blue;
-            border-radius: 5px;
-            text-decoration: none;
-            padding: 13px 46px;
-            color: $white;
+            @include button-link;
+            
+
+            &:hover {
+                background: #3F3D56;
+                box-shadow: 5px 2px 2px $black;
+                transform: translateX(3px);
+            }
         }
     }
 
