--- a/src/sass/layouts/layout_000/hero.scss
+++ b/src/sass/layouts/layout_000/hero.scss
@@ -46,7 +46,7 @@
             
 
             &:hover {
-                background: #3F3D56;
+                background: $purpleDark;
                 box-shadow: 5px 2px 2px $black;
                 transform: translateX(3px);
             }
