--- a/src/sass/layouts/layout_000/quality.scss
+++ b/src/sass/layouts/layout_000/quality.scss
@@ -1,4 +1,9 @@
 .quality {
+    background: url('../img/qualify-bg-circle1.png') 100% 50%,
+                url('../img/qualify-bg-circle2.png') 100% 50%,
+                url('../img/qualify-bg-dots.png') 50% 94%,
+                url('../img/qualify-bg-dots.png') 10% 85%;
+    background-repeat: no-repeat;
 
     .container {
         padding-top: 30px;
@@ -30,20 +35,20 @@
         }
 
         img {
-            max-width: 445px;
+            max-width: 80%;
             height: auto;
         }
     }
     &-pos {
         max-width: 100%;
         display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
+        flex-direction: column;
+        align-items: flex-start;
 
         img {
-            max-width: 350px;
+            max-width: 80%;
             height: auto;
-            // margin-bottom: 70px;
+            margin-bottom: 70px;
         }
         span {
             width: 100%;
@@ -56,6 +61,17 @@
             font-size: 18px;
             line-height: 150%;
             margin-bottom: 40px;
+        }
+        
+        a {
+            @include button-link;
+            padding: 13px 31px;
+            font-size: 20px;
+            &:hover {
+                background: $purpleDark;
+                box-shadow: 5px 2px 2px $black;
+                transform: translateX(3px);
+            }
         }
     }
 }
