--- a/src/sass/layouts/layout_1170/quality.scss
+++ b/src/sass/layouts/layout_1170/quality.scss
@@ -12,10 +12,33 @@
         max-width: 50%;
         margin-bottom: 0px;
         margin-right: 60px;
+
+        img {
+            max-width: 445px;
+        }
     }
 
     &-pos {
         max-width: 50%;
-        flex-direction: column;
+        flex-direction: column-reverse;
+
+        span {
+            order: 2;
+        }
+
+        img {
+            max-width: 350px;
+            margin-bottom: 70px;
+            order: 3;
+        }
+
+        p {
+            margin-bottom: 50px;
+            order: 1;
+        }
+
+        a {
+            max-width: fit-content;
+        }
     }
 }
