--- a/src/sass/layouts/layout_000/feedback.scss
+++ b/src/sass/layouts/layout_000/feedback.scss
@@ -55,19 +55,48 @@
             cursor: pointer;
         }
 
-        input {
-            min-height: 60px;
+        label {
             min-width: 100%;
-            margin-bottom: 20px;
-            border: 1px solid $whiteBorder;
-            background-color: $whiteBg;
-            outline: none;
-            text-align: center;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-bottom: 20px;
 
             &:nth-of-type(2) {
-                margin-bottom: 30px;
+                padding-bottom: 30px;
+
+                span {
+                    bottom: 13px;
+                }
+
+            }
+
+            input {
+                min-height: 60px;
+                min-width: 100%;
+                border: 1px solid $whiteBorder;
+                background-color: $whiteBg;
+                outline: none;
+                text-align: center;
+            }
+            span {
+                @include text-title;
+                font-size: 14px;
+                font-style: italic;
+                color: $red;
+                width: 100%;
+                position: absolute;
+                bottom: 3px;
+                text-align: center;
+            }
+    
+            .input--error {
+                border-color: $red;
             }
         }
+
+        
 
         button {
             @include button-link;
