--- a/src/sass/layouts/layout_000/general.scss
+++ b/src/sass/layouts/layout_000/general.scss
@@ -3,6 +3,10 @@
     line-height: 1;
     scroll-behavior: smooth;
 }
+body {
+    margin: 0;
+    padding: 0;
+}
 
 .container {
     max-width: 1200px;
