completed events and google map sections

--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -1,6 +1,7 @@
 $white: #fff;
 $whiteBg: #FCFCFC;
 $whiteBorder: #E9E9E9;
+$whiteBlock: #F3F3F3;
 $black: #000000;
 $blue: #0098AC;
 $purpleDark: #3F3D56;
