--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -2,6 +2,7 @@ $white: #fff;
 $whiteBg: #FCFCFC;
 $whiteBorder: #E9E9E9;
 $whiteBlock: #F3F3F3;
+$whiteOpacity: rgba(255, 255, 255, 0.7);
 $black: #000000;
 $blue: #0098AC;
 $purpleDark: #3F3D56;
