--- a/src/sass/layouts/layout_000/events.scss
+++ b/src/sass/layouts/layout_000/events.scss
@@ -2,8 +2,7 @@
 
     .container {
         @include text-title;
-        padding-top: 30px;
-        padding-bottom: 100px;
+        padding: 30px 5px 100px 5px;
         display: flex;
         flex-direction: column;
         align-items: center;
