added parallax to hero and animation to intro

--- a/src/sass/layouts/layout_000/events.scss
+++ b/src/sass/layouts/layout_000/events.scss
@@ -39,6 +39,7 @@
                 height: 32px;
                 outline: none;
                 border: transparent;
+                z-index: 3;
                 cursor: pointer;
 
                 &:last-child {
