--- a/src/sass/layouts/layout_000/hero.scss
+++ b/src/sass/layouts/layout_000/hero.scss
@@ -6,7 +6,10 @@
     position: relative;
 
     &-parallax-icon {
+        border-radius: 50%;
         position: absolute;
+        box-shadow: 3px 2px 2px $silver;
+        // perspective: 1500;
 
         &:nth-of-type(1) {
             top: 12%;
@@ -16,11 +19,13 @@
         &:nth-of-type(2) {
             top: 25%;
             left: 8%;
+            box-shadow: 10px 2px 2px $silver;
         }
 
         &:nth-of-type(3) {
             top: 15%;
             left: 80%;
+            box-shadow: 15px 2px 2px $silver;
         }
 
         &:nth-of-type(4) {
@@ -30,6 +35,7 @@
         &:nth-of-type(5) {
             top: 45%;
             left: 25%;
+            box-shadow: 5px 2px 2px $silver;
         }
         &:nth-of-type(6) {
             top: 55%;
@@ -42,6 +48,7 @@
         &:nth-of-type(8) {
             top: 75%;
             left: 20%;
+            box-shadow: 10px 2px 2px $silver;
         }
         
     }
