completed contacts page

--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -8,5 +8,6 @@ $blue: #0098AC;
 $purpleDark: #3F3D56;
 $whiteGreen: #E6F5F7;
 $silver: silver;
+$silverBG:#D4D4D4;
 $silverShadow: rgb(145, 143, 143);
 $red: rgb(245, 83, 83);
