--- a/src/sass/layouts/layout_000/events.scss
+++ b/src/sass/layouts/layout_000/events.scss
@@ -52,7 +52,7 @@
             flex-direction: row;
             align-items: center;
             max-width: 100%;
-            min-height: 270px;
+            min-height: 290px;
     
             &__card {
                 background-color: $whiteBg;
@@ -62,7 +62,7 @@
                 justify-content: center;
                 padding: 25px;
                 position: relative;
-                min-height: 198px;
+                height: 230px;
                 min-width: 227px;
     
                 div {
@@ -100,12 +100,17 @@
                 span {
                     font-weight: 300;
                     font-size: 16px;
-                    margin-bottom: 20px;
+                    line-height: 30px;
                 }
                 p {
                     font-size: 18px;
                     max-width: 185px;
+                    line-height: 130%;
                 }
+            }
+
+            .card-today {
+                color: $blue;
             }
         } 
     }
