--- a/src/sass/layouts/layout_000/header.scss
+++ b/src/sass/layouts/layout_000/header.scss
@@ -6,7 +6,6 @@
     background-color: $whiteGreen;
     border: 1px solid $whiteBorder;
     z-index: 4;
-    // transition: 0.3s;
 
     .container {
         padding-top: 19px;
@@ -148,6 +147,7 @@
 .header--active {
     height: 100vh;
     width: 100%;
+    transition: 0.2s;
 
     .container {
         padding: 19px 0px;
@@ -169,9 +169,11 @@
 
         &__list {
             display: flex;
+            opacity: 1;
             flex-direction: column;
             text-align: center;
             min-width: 100%;
+
             &-item {
                 text-transform: uppercase;
                 padding: 15px 0;
